--- a/index.html
+++ b/index.html
@@ -87,18 +87,18 @@
         </div>
     </main>
 
-    <div class="back-to-top" id="backToTop">&#9650;</div>
-
     <section id="sobre">
         <div class="textsobre sectionanima">
-            <h1>[Sobre mim]</h1>
-            <p>Carioca, 21 anos e imerço no mundo da tecnologia.</p>
-            <p>Jovem desenvolvedor especializado na construção de experiências digitais excepcionais. Com proficiência nos frameworks mais utilizados pra Web, tenho foco em transformar ideias em realidade, criando interfaces intuitivas e atraentes.</p>
-            <p>Graduando em Análise e Desenvolvimento de Sistemas.</p>
-            <p>Navegue pelo meu portfólio para descobrir os projetos que tenho orgulho de ter contribuído. Estou comprometido em demonstrar como minha paixão pelo desenvolvimento Front-end se traduz em resultados concretos. E caso queira ter esse Desenvolvedor Front-end na sua equipe ou realizar um trabalho Freelancer, basta entrar em contato e vamos ao trabalho.</p>
-            <div class="arrowtoinfo">
-                <i class="fa-solid fa-arrow-turn-up fa-xl arrow" style="color: #ffffff;"></i>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, perferendis?</p>
+            <div>
+                <h1>[Sobre mim]</h1>
+                <p>Carioca, 21 anos e imerço no mundo da tecnologia.</p>
+                <p>Jovem desenvolvedor especializado na construção de experiências digitais excepcionais. Com proficiência nos frameworks mais utilizados pra Web, tenho foco em transformar ideias em realidade, criando interfaces intuitivas e atraentes.</p>
+                <p>Graduando em Análise e Desenvolvimento de Sistemas.</p>
+                <p>Navegue pelo meu portfólio para descobrir os projetos que tenho orgulho de ter contribuído. Estou comprometido em demonstrar como minha paixão pelo desenvolvimento Front-end se traduz em resultados concretos. E caso queira ter esse Desenvolvedor Front-end na sua equipe ou realizar um trabalho Freelancer, basta entrar em contato e vamos ao trabalho.</p>
+                <div class="arrowtoinfo">
+                    <i class="fa-solid fa-arrow-turn-up fa-xl arrow" style="color: #ffffff;"></i>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, perferendis?</p>
+                </div>
             </div>
             <img src="./assets/eu.jpg" class="myphoto" alt="Imagem minha">
         </div>
