feat: section about with all my photos

--- a/index.html
+++ b/index.html
@@ -103,7 +103,18 @@
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, perferendis?</p>
                     </div>
                 </div>
-                <img src="./assets/eu.jpg" class="myphoto" alt="Imagem minha">
+                <div class="imgsaboutme">
+                    <img src="/assets/eu.jpg" alt="Eu">
+                    <img src="/assets/me.jpg" alt="Eu">
+                    <img src="/assets/event.jpg" alt="Evento Rio Inovation Week">
+                    <img src="/assets/gym.jpg" alt="Academia">
+                    <img src="/assets/reading.jpg" alt="Lendo livro">
+                    <img src="/assets/study.jpg" alt="Estudando">
+                    <img src="/assets/study2.jpg" alt="Estudando">
+                    <img src="/assets/uni.jpg" alt="Na faculdade">
+                    <img src="/assets/uni2.jpg" alt="Na faculdade">
+                    <img src="/assets/uni3.jpg" alt="Na faculdade">
+                </div>
             </div>
         </section>
 
