feat: photos adjusts and animation

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
                     <img src="/assets/uni.jpg" alt="Na faculdade">
                     <img src="/assets/uni2.jpg" alt="Na faculdade">
                     <img src="/assets/uni3.jpg" alt="Na faculdade">
+                    <img src="/assets/trip.jpg" alt="Viajando">
                 </div>
             </div>
         </section>
