feat: change everything (colors, menu hamburguer)

--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;700;800;900&family=Righteous&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="interface">
-        <section>
-            <header>
+    <header>
                 <div class="headersize">
                     <div class="titleprofile">
                         <h1>H</h1>
@@ -28,69 +26,42 @@
                             </div>
                         </div>
                     </div>
-                    <div class="menuhamburger">
-                        <span class="bar"></span>
-                        <span class="bar"></span>
-                    </div>
                     <div class="disponiveltowork">
                         <span class="disponivel"></span>
                         <p>Disponível</p>
                     </div>
+                    <div class="menuhamburger">
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                    </div>
                 </div>
-            </header>
+    </header>
         
-            <div class="mobileMenuContent">
-                <div class="divisorcontent">
-                    <nav>
-                        <ul>
-                            <li><a href="#">Projetos</a></li>
-                            <li><a href="#">Serviços</a></li>
-                            <li><a href="#">Habilidades</a></li>
-                            <li><a href="#">Contato</a></li>
-                        </ul>
-                    </nav>
-                    <div class="menubg">
-                        <div class="contact">
-                          <div class="namecelemail">
-                            <h1>Desenvolvedor Front-end & Desenvolvedor Web</h1>
-                            <div class="iconlink">
-                              <i class="fa-solid fa-envelope" style="color: #000000;"></i>
-                              <a href="#">henriquepinheiroxavier@gmail.com</a>
-                            </div>
-                          </div>
-                          <div class="socialmedia">
-                            <a href="#" target="_blank" class="underline">
-                              <span>LinkedIn</span><svg viewBox="0 0 13 20"><polyline points="0.5 19.5 3 19.5 12.5 10 3 0.5" /></svg>
-                            </a>
-                            <a href="#" target="_blank" class="underline">
-                              <span>Github</span><svg viewBox="0 0 13 20"><polyline points="0.5 19.5 3 19.5 12.5 10 3 0.5" /></svg>
-                            </a>
-                            <a href="#" target="_blank" class="underline">
-                              <span>Whatsapp</span><svg viewBox="0 0 13 20"><polyline points="0.5 19.5 3 19.5 12.5 10 3 0.5" /></svg>
-                            </a>
-                          </div>
-                        </div>
-                      </div>
-                </div>
+    <div class="mobileMenuContent">
+        <div class="divisorcontent">
+            <div class="hamburgerToClose">
+                <span class="closinghamburger" id="closeIcon"></span>
+                <span class="closinghamburger" id="closeIcon"></span>
             </div>
+        </div>
+    </div>
         
-            <main>
-                <div class="mainsize">
-                    <div class="textmain">
-                        <h1>Construa o Futuro Digital.</h1>
-                        <h1>Tenha um site profissional.</h1>
-                        <p>Auxilio empresas a desenvolverem produtos digitais modernos e de alta qualidade. Design, Desenvolvimento Front-end e habilidade profissional para destacar seu produto no mercado.</p>
-                        <div class="divmain">
+    <main>
+        <div class="mainsize">
+            <div class="textmain">
+                <h1>Construa o Futuro Digital.</h1>
+                <h1>Tenha um site profissional.</h1>
+                <p>Auxilio empresas a desenvolverem produtos digitais modernos e de alta qualidade. Design, Desenvolvimento Front-end e habilidade profissional para destacar seu produto no mercado.</p>
+                <div class="divmain">
                             <a class="seeprojetos" href="#projetos">Ver trabalhos</a>
                             <a href="#contato">Contato ↗</a>
                         </div>
                         <img class="textcircle" src="/assets/textcirclewhite.png" alt="Texto circulando">
                     </div>
                 </div>
-            </main>
-        </section>
+    </main>
 
-        <section id="sobre">
+    <section id="sobre">
             <div class="textsobre">
                 <div>
                     <h1>[Sobre mim]</h1>
@@ -117,9 +88,9 @@
                 <img src="/assets/uni3.jpg" alt="Na faculdade">
                 <img src="/assets/trip.jpg" alt="Viajando">
             </div>
-        </section>
+    </section>
 
-        <section id="projetos">
+    <section id="projetos">
             <div class="textproject">
                 <h1>[Projetos]</h1>
                 <div class="linebreak"></div>
@@ -227,9 +198,9 @@
                     </div>
                 </div>
             </div>
-        </section>
+    </section>
 
-        <section id="skills">
+    <section id="skills">
             <div class="textskill">
                 <h1>[Habilidades]</h1>
                 <div class="containerskills">
@@ -283,9 +254,9 @@
                     </div>
                 </div>
             </div>    
-        </section>
+    </section>
 
-        <section id="contato">
+    <section id="contato">
             <div class="contactsize">
                 <div class="sobrecontato">
                     <h1>[Contato]</h1>
@@ -323,8 +294,7 @@
                     </form>
                 </div>
             </div>    
-        </section>
-    </div>
+    </section>
     <script src="./main.js"></script>
 </body>
 </html>
