feat: change the content inside the menu mobile

--- a/index.html
+++ b/index.html
@@ -16,32 +16,70 @@
 </head>
 <body>
     <header>
-                <div class="headersize">
-                    <div class="titleprofile">
-                        <h1>H</h1>
-                        <div id="title">
-                            <h1>Henrique Pinheiro</h1>
-                            <div class="profile">
-                            <h3 href="#" data-replace="Freelancer"><span>Desenvolvedor Front-end</span></h3>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="disponiveltowork">
-                        <span class="disponivel"></span>
-                        <p>Disponível</p>
-                    </div>
-                    <div class="menuhamburger">
-                        <span class="bar"></span>
-                        <span class="bar"></span>
+        <div class="headersize">
+            <div class="titleprofile">
+                <h1>H</h1>
+                <div id="title">
+                    <h1>Henrique Pinheiro</h1>
+                    <div class="profile">
+                        <h3 href="#" data-replace="Freelancer"><span>Desenvolvedor Front-end</span></h3>
                     </div>
                 </div>
+            </div>
+            <div class="disponiveltowork">
+                <span class="disponivel"></span>
+                <p>Disponível</p>
+            </div>
+            <div class="menuhamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+        </div>
     </header>
         
     <div class="mobileMenuContent">
         <div class="divisorcontent">
-            <div class="hamburgerToClose">
-                <span class="closinghamburger" id="closeIcon"></span>
-                <span class="closinghamburger" id="closeIcon"></span>
+            <div class="divisorpart1">
+                <div class="headermobilecontentmenu">
+                    <div class="languageschange">
+                        <p>EN</p>
+                        <p>ES</p>
+                    </div>
+                    <div class="hamburgerToClose">
+                        <span class="closingmenu"></span>
+                        <span class="closingmenu"></span>
+                    </div>
+                </div>
+                <div class="linksmenutoportfolio">
+                    <nav>
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Projects</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+            <div class="divisorpart2">
+                <p>@2024. Todos os direitos reservados. Desenvolvido por Henrique Pinheiro.</p>
+                <div class="socialmediasmenu">
+                    <a class="btn" href="#">
+                        <i class="fa-brands fa-github"></i>
+                    </a>
+                    <a class="btn" href="#">
+                        <i class="fa-brands fa-linkedin"></i>
+                    </a>
+                    <a class="btn" href="#">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a class="btn" href="#">
+                        <i class="fa-brands fa-whatsapp"></i>
+                    </a>
+                    <a class="btn" href="#">
+                        <i class="fa-solid fa-envelope"></i>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
@@ -53,12 +91,12 @@
                 <h1>Tenha um site profissional.</h1>
                 <p>Auxilio empresas a desenvolverem produtos digitais modernos e de alta qualidade. Design, Desenvolvimento Front-end e habilidade profissional para destacar seu produto no mercado.</p>
                 <div class="divmain">
-                            <a class="seeprojetos" href="#projetos">Ver trabalhos</a>
-                            <a href="#contato">Contato ↗</a>
-                        </div>
-                        <img class="textcircle" src="/assets/textcirclewhite.png" alt="Texto circulando">
-                    </div>
+                    <a class="seeprojetos" href="#projetos">Ver trabalhos</a>
+                    <a href="#contato">Contato ↗</a>
                 </div>
+                <img class="textcircle" src="/assets/textcirclewhite.png" alt="Texto circulando">
+            </div>
+        </div>
     </main>
 
     <section id="sobre">
