feat: add social media buttons

--- a/index.html
+++ b/index.html
@@ -53,16 +53,27 @@
                 <div class="linksmenutoportfolio">
                     <nav>
                         <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">Projects</a></li>
-                            <li><a href="#">Contact</a></li>
+                            <li>
+                                <a href="#">Home</a>
+                                <i class="fa-solid fa-chevron-right"></i>
+                            </li>
+                            <li>
+                                <a href="#">About</a>
+                                <i class="fa-solid fa-chevron-right"></i>
+                            </li>
+                            <li>
+                                <a href="#">Projects</a>
+                                <i class="fa-solid fa-chevron-right"></i>
+                            </li>
+                            <li>
+                                <a href="#">Contact</a>
+                                <i class="fa-solid fa-chevron-right"></i>
+                            </li>
                         </ul>
                     </nav>
                 </div>
             </div>
             <div class="divisorpart2">
-                <p>@2024. Todos os direitos reservados. Desenvolvido por Henrique Pinheiro.</p>
                 <div class="socialmediasmenu">
                     <a class="btn" href="#">
                         <i class="fa-brands fa-github"></i>
