--- a/index.html
+++ b/index.html
@@ -111,32 +111,7 @@
     </main>
 
     <section id="sobre">
-            <div class="textsobre">
-                <div>
-                    <h1>[Sobre mim]</h1>
-                    <p>Carioca, 21 anos e imerço no mundo da tecnologia.</p>
-                    <p>Jovem desenvolvedor especializado na construção de experiências digitais excepcionais. Com proficiência nos frameworks mais utilizados pra Web, tenho foco em transformar ideias em realidade, criando interfaces intuitivas e atraentes.</p>
-                    <p>Graduando em Análise e Desenvolvimento de Sistemas.</p>
-                    <p>Navegue pelo meu portfólio para descobrir os projetos que tenho orgulho de ter contribuído. Estou comprometido em demonstrar como minha paixão pelo desenvolvimento Front-end se traduz em resultados concretos. E caso queira ter esse Desenvolvedor Front-end na sua equipe ou realizar um trabalho Freelancer, basta entrar em contato e vamos ao trabalho.</p>
-                    <div class="arrowtoinfo">
-                        <i class="fa-solid fa-arrow-turn-up fa-xl arrow" style="color: #ffffff;"></i>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, perferendis?</p>
-                    </div>
-                </div>
-            </div>
-            <div class="imgsaboutme">
-                <img src="/assets/eu.jpg" alt="Eu">
-                <img src="/assets/me.jpg" alt="Eu">
-                <img src="/assets/event.jpg" alt="Evento Rio Inovation Week">
-                <img src="/assets/gym.jpg" alt="Academia">
-                <img src="/assets/reading.jpg" alt="Lendo livro">
-                <img src="/assets/study.jpg" alt="Estudando">
-                <img src="/assets/study2.jpg" alt="Estudando">
-                <img src="/assets/uni.jpg" alt="Na faculdade">
-                <img src="/assets/uni2.jpg" alt="Na faculdade">
-                <img src="/assets/uni3.jpg" alt="Na faculdade">
-                <img src="/assets/trip.jpg" alt="Viajando">
-            </div>
+
     </section>
 
     <section id="projetos">
@@ -344,6 +319,31 @@
                 </div>
             </div>    
     </section>
+
+    <footer>
+        <div>
+            <div>
+
+            </div>
+            <div>
+
+            </div>
+            <div>
+                
+            </div>
+        </div>
+        <div>
+            <h1>H</h1>
+            <p>@2024 Henrique Pinheiro. All Rights Reserved.</p>
+            <div>
+                <a href="#"><i class="fa-brands fa-github"></i></a>
+                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+                <a href="#"><i class="fa-solid fa-envelope"></i></a>
+            </div>
+        </div>
+    </footer>
     <script src="./main.js"></script>
 </body>
 </html>
