feat: project section changed

--- a/index.html
+++ b/index.html
@@ -105,121 +105,57 @@
                     <a class="seeprojetos" href="#projetos">Ver trabalhos</a>
                     <a href="#contato">Contato ↗</a>
                 </div>
-                <img class="textcircle" src="/assets/textcirclewhite.png" alt="Texto circulando">
+                <img class="textcircle" src="/assets/textcircle.png" alt="Texto circulando">
             </div>
         </div>
     </main>
 
     <section id="sobre">
-
+        <h1>Sobre</h1>
     </section>
 
     <section id="projetos">
             <div class="textproject">
-                <h1>[Projetos]</h1>
-                <div class="linebreak"></div>
-                <div class="containerprojects">
-                    <div class="projeto">
-                        <a href="https://dsmconsultoria.vercel.app/" target="_blank">
-                            <div class="photoprojeto">
-                                <img class="imgprincipalprojeto" src="./assets/testdsm.jpg" alt="">
-                                <img class="imgprincipalprojetohover" src="./assets/dsmscreen.jpg" alt="">
+                <h1 class="titlepageproject">Projetos</h1>
+                <div class="row">
+                        <div class="project1 card">
+                          <div class="wrapper">
+                            <div class="data">
+                              <div class="content">
+                                <span class="author">Desenvolvimento Web</span>
+                                <h1 class="title"><a class="titleproject" href="#">DSM Consultoria</a></h1>
+                                <p class="text">The antsy bingers of Netflix will eagerly anticipate the digital release of the Survive soundtrack, out today.</p>
+                                <a href="#" class="linkto">Ver projeto</a>
+                              </div>
                             </div>
-                        </a>
-                        <div class="contentimg">
-                            <i class="fa-solid fa-chevron-left fa-lg" style="color: #ffffff;"></i>
-                            <div class="menutabsimgs">
-                                <span></span>
-                                <span></span>
-                                <span></span>
-                            </div>
-                            <i class="fa-solid fa-chevron-right fa-lg" style="color: #ffffff;"></i>
+                          </div>
                         </div>
-                        <div class="infosprojeto">
-                            <div class="linkstoprojects">
-                                <h3>DSM Consultoria</h3>
-                                <a class="repositorylink" href="https://dsmconsultoria.vercel.app/" target="_blank">
-                                    <p>Ver o site</p>
-                                    <i class="fa-solid fa-arrow-up-right-from-square fa-xl" style="color: #ffffff;"></i>
-                                </a>
-                                <a class="repositorylink" href="#" target="_blank">
-                                    <p>Repositório</p>
-                                    <i class="fa-brands fa-github fa-xl" style="color: #ffffff;"></i>
-                                </a>
-                            </div>
-                            <div class="descriptionprojects">
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt, eveniet quod aperiam recusandae eaque expedita cum consequatur laudantium ullam nisi.</p>
-                            </div>
-                        </div>
-                    </div>
 
-                    <div class="projeto">
-                        <a href="https://dsmconsultoria.vercel.app/" target="_blank">
-                            <div class="photoprojeto">
-                                <img class="imgprincipalprojeto" src="./assets/testjapa.jpg" alt="">
-                                <img class="imgprincipalprojetohover" src="./assets/japascreen.jpg" alt="">
+                        <div class="project2 card">
+                            <div class="wrapper">
+                              <div class="data">
+                                <div class="content">
+                                  <span class="author">Desenvolvimento Web</span>
+                                  <h1 class="title"><a class="titleproject" href="#">Japapou</a></h1>
+                                  <p class="text">The antsy bingers of Netflix will eagerly anticipate the digital release of the Survive soundtrack, out today.</p>
+                                  <a href="#" class="linkto">Ver projeto</a>
+                                </div>
+                              </div>
                             </div>
-                        </a>
-                        <div class="contentimg">
-                            <i class="fa-solid fa-chevron-left fa-lg" style="color: #ffffff;"></i>
-                            <div class="menutabsimgs">
-                                <span></span>
-                                <span></span>
-                                <span></span>
-                            </div>
-                            <i class="fa-solid fa-chevron-right fa-lg" style="color: #ffffff;"></i>
-                        </div>
-                        <div class="infosprojeto">
-                            <div class="linkstoprojects">
-                                <h3>DSM Consultoria</h3>
-                                <a class="repositorylink" href="https://dsmconsultoria.vercel.app/" target="_blank">
-                                    <p>Ver o site</p>
-                                    <i class="fa-solid fa-arrow-up-right-from-square fa-xl" style="color: #ffffff;"></i>
-                                </a>
-                                <a class="repositorylink" href="#" target="_blank">
-                                    <p>Repositório</p>
-                                    <i class="fa-brands fa-github fa-xl" style="color: #ffffff;"></i>
-                                </a>
-                            </div>
-                            <div class="descriptionprojects">
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt, eveniet quod aperiam recusandae eaque expedita cum consequatur laudantium ullam nisi.</p>
-                            </div>
-                        </div>
-                    </div>
+                          </div>
 
-                    <div class="projeto">
-                        <a href="https://dsmconsultoria.vercel.app/" target="_blank">
-                            <div class="photoprojeto">
-                                <img class="imgprincipalprojeto" src="./assets/testreal.jpg" alt="">
-                                <img class="imgprincipalprojetohover" src="./assets/realestate.jpg" alt="">
+                          <div class="project3 card">
+                            <div class="wrapper">
+                              <div class="data">
+                                <div class="content">
+                                  <span class="author">Desenvolvimento Web</span>
+                                  <h1 class="title"><a class="titleproject" href="#">Rexpeita</a></h1>
+                                  <p class="text">The antsy bingers of Netflix will eagerly anticipate the digital release of the Survive soundtrack, out today.</p>
+                                  <a href="#" class="linkto">Ver projeto</a>
+                                </div>
+                              </div>
                             </div>
-                        </a>
-                        <div class="contentimg">
-                            <i class="fa-solid fa-chevron-left fa-lg" style="color: #ffffff;"></i>
-                            <div class="menutabsimgs">
-                                <span></span>
-                                <span></span>
-                                <span></span>
-                            </div>
-                            <i class="fa-solid fa-chevron-right fa-lg" style="color: #ffffff;"></i>
-                        </div>
-                        <div class="infosprojeto">
-                            <div class="linkstoprojects">
-                                <h3>DSM Consultoria</h3>
-                                <a class="repositorylink" href="https://dsmconsultoria.vercel.app/" target="_blank">
-                                    <p>Ver o site</p>
-                                    <i class="fa-solid fa-arrow-up-right-from-square fa-xl" style="color: #ffffff;"></i>
-                                </a>
-                                <a class="repositorylink" href="#" target="_blank">
-                                    <p>Repositório</p>
-                                    <i class="fa-brands fa-github fa-xl" style="color: #ffffff;"></i>
-                                </a>
-                            </div>
-                            <div class="descriptionprojects">
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt, eveniet quod aperiam recusandae eaque expedita cum consequatur laudantium ullam nisi.</p>
-                            </div>
-                        </div>
-                    </div>
+                          </div>
                 </div>
             </div>
     </section>
