feat: section about me created

--- a/index.html
+++ b/index.html
@@ -111,7 +111,42 @@
     </main>
 
     <section id="sobre">
-        <h1>Sobre</h1>
+        <h1 class="titlesobre">Sobre mim</h1>
+        <div class="introducingmyself">
+            <img src="./assets/me2.jpg" alt="">
+            <p>Olá, me chamo Henrique, tenho 21 anos e sou graduando de Análise e Desenvolvimento de Sistemas. Comecei a estudar e tive uma conexão direta com o desenvolvimento Front-end, desde então realizo alguns projetos e diariamente busco me aperfeiçoar cada vez mais, aprendendo e entendendo que o estudo constante é a chave pro sucesso.</p>
+        </div>
+        <div class="infosaboutme">
+            <div>
+                <h2>Infos</h2>
+                <h3>Nome:</h3>
+                <p>Henrique Pinheiro Xavier</p>
+                <h3>Cargo:</h3>
+                <p>Freelancer & Desenvolvedor Front-end</p>
+                <h3>Formação:</h3>
+                <p>Graduando em Análise e Desenvolvimento de Sistemas</p>
+                <h3>Idioma:</h3>
+                <p>Português, Inglês e Espanhol</p>
+                <h3>Email:</h3>
+                <a href="#" target="_blank">henriquepinheiroxavier@gmail.com</a>
+                <h3>Github:</h3>
+                <a href="#" target="_blank">Henriquepx</a>
+            </div>
+            <div>
+                <h2>Habilidades</h2>
+                <p>Com habilidades em programação e conhecimento nas seguintes tecnologias: HTML, CSS, Bootstrap, Tailwind, Sass, Styled-Components, JavaScript, TypeScript, ReactJS, conhecimento em BD com SQL.</p>
+            </div>
+            <div>
+                <h2>Diferencial</h2>
+                <p>Design Responsivo: Interfaces adaptáveis para desktops, tablets e smartphones.</p>
+                <p>Paixão por UX/UI: Compromisso com interfaces intuitivas e visualmente atraentes.</p>
+                <p>Colaboração Efetiva: Trabalho colaborativo para projetos alinhados e entregues no prazo.</p>
+                <p>Tecnologias Modernas: Atualizado com ReactJS, TypeScript e Styled-Components.</p>
+                <p>Foco em Performance: Otimização para carregamento rápido e eficiência.</p>
+                </ul>
+            </div>
+            
+        </div>
     </section>
 
     <section id="projetos">
