feat: add new texts in about me

--- a/index.html
+++ b/index.html
@@ -134,7 +134,12 @@
             </div>
             <div>
                 <h2>Habilidades</h2>
-                <p>Com habilidades em programação e conhecimento nas seguintes tecnologias: HTML, CSS, Bootstrap, Tailwind, Sass, Styled-Components, JavaScript, TypeScript, ReactJS, conhecimento em BD com SQL.</p>
+                <p>HTML, CSS: Fundamentos para construção de interfaces web.</p>
+                <p>Bootstrap, Tailwind: Frameworks para desenvolvimento ágil e designs consistentes.</p>
+                <p>Sass, Styled-Components: Ferramentas para estilização avançada e modularização.</p>
+                <p>JavaScript, TypeScript: Linguagens para interatividade e desenvolvimento robusto.</p>
+                <p>ReactJS: Framework eficiente para criação de interfaces de usuário.</p>
+                <p>Banco de Dados (SQL): Conhecimento sólido em gerenciamento de dados.</p>
             </div>
             <div>
                 <h2>Diferencial</h2>
