feat: project card animated

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </div>
         <div class="infosaboutme">
             <div>
-                <h2>Infos</h2>
+                <h2>Infos Pessoais</h2>
                 <h3>Nome:</h3>
                 <p>Henrique Pinheiro Xavier</p>
                 <h3>Cargo:</h3>
